Add LineMerger directed option (#597)
Co-authored-by: sergei sh <sshoulbakov@kontur.io>

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -933,6 +933,11 @@ extern GEOSGeometry GEOS_DLL *GEOSLineMerge_r(
     GEOSContextHandle_t handle,
     const GEOSGeometry* g);
 
+/** \see GEOSLineMergeDirected */
+extern GEOSGeometry GEOS_DLL *GEOSLineMergeDirected_r(
+    GEOSContextHandle_t handle,
+    const GEOSGeometry* g);
+
 /** \see GEOSReverse */
 extern GEOSGeometry GEOS_DLL *GEOSReverse_r(
     GEOSContextHandle_t handle,
@@ -3767,6 +3772,17 @@ extern GEOSGeometry GEOS_DLL *GEOSDensify(
 * \see geos::operation::linemerge::LineMerger
 */
 extern GEOSGeometry GEOS_DLL *GEOSLineMerge(const GEOSGeometry* g);
+
+/**
+* Sews together a set of fully noded LineStrings
+* removing any cardinality 2 nodes in the linework
+* only if possible without changing order of points.
+* \param g The input linework
+* \return The merged linework
+* Caller is responsible for freeing with GEOSGeom_destroy().
+* \see geos::operation::linemerge::LineMerger
+*/
+extern GEOSGeometry GEOS_DLL *GEOSLineMergeDirected(const GEOSGeometry* g);
 
 /**
 * For geometries with coordinate sequences, reverses the order
