--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -35,8 +35,8 @@ stages:
           CXXSTD: 11, 20
           CXX: g++-12
           PACKAGES: g++-12
-          VM_IMAGE: ubuntu-22.04
-          VM_NAME: jammy
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
         GCC 11:
           CXXSTD: 11, 20
           CXX: g++-11
