--- a/configure.ac
+++ b/configure.ac
@@ -15,7 +15,7 @@ JTS_PORT=1.13.0
 
 dnl -- Version info for the CAPI
 CAPI_INTERFACE_CURRENT=12
-CAPI_INTERFACE_REVISION=4
+CAPI_INTERFACE_REVISION=5
 CAPI_INTERFACE_AGE=11
 
 dnl
@@ -24,7 +24,7 @@ dnl -- encoding ABI break at every release
 dnl
 VERSION_MAJOR=3
 VERSION_MINOR=7
-VERSION_PATCH=4
+VERSION_PATCH=5dev
 VERSION="$VERSION_MAJOR.$VERSION_MINOR.$VERSION_PATCH"
 VERSION_RELEASE=`echo "$VERSION" | sed -E 's/^([[0-9]+\.[0-9]+\.[0-9]+]).*$/\1/'`
 
