Fix build to include files needed by cmake

--- a/configure.ac
+++ b/configure.ac
@@ -509,6 +509,8 @@ AC_OUTPUT([
 	tools/Makefile
 	tools/geos-config
 	tools/astyle/Makefile
+	util/Makefile
+	util/geosop/Makefile
 	])
 
 dnl -- echo "---------------------------------------"
