Fix up autoconf to package required files for cmake in dist target

--- a/tests/perf/capi/Makefile.am
+++ b/tests/perf/capi/Makefile.am
@@ -6,7 +6,10 @@ prefix=@prefix@
 top_srcdir=@top_srcdir@
 top_builddir=@top_builddir@
 
-check_PROGRAMS = memleak_mp_prep perf_intersection
+noinst_PROGRAMS = \
+	perf_geospreparedcontains \
+	memleak_mp_prep \
+	perf_intersection
 
 LIBS = $(top_builddir)/capi/libgeos_c.la
 AM_CPPFLAGS = -I$(top_builddir)/capi -I$(top_srcdir)/include
@@ -15,7 +18,11 @@ memleak_mp_prep_SOURCES = memleak_mp_prep.c
 memleak_mp_prep_LDADD = $(LIBS)
 
 perf_intersection_SOURCES = IntersectionPerfTest.cpp
-perf_intersection_LDADD = $(top_builddir)/src/libgeos.la
+perf_intersection_LDADD = $(LIBS)
+
+perf_geospreparedcontains_SOURCES = GEOSPreparedContainsPerfTest.cpp
+perf_geospreparedcontains_LDADD = $(LIBS)
 
 EXTRA_DIST = CMakeLists.txt
+
 
