Add GEOSPolygonHullSimplifyByArea to CAPI

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -779,7 +779,14 @@ extern GEOSGeometry GEOS_DLL *GEOSPolygonHullSimplify_r(
     GEOSContextHandle_t handle,
     const GEOSGeometry* g,
     unsigned int isOuter,
-    double ratio);
+    double vertexNumFraction);
+
+/** \see GEOSPolygonHullSimplifyByArea */
+extern GEOSGeometry GEOS_DLL *GEOSPolygonHullSimplifyByArea_r(
+    GEOSContextHandle_t handle,
+    const GEOSGeometry* g,
+    unsigned int isOuter,
+    double areaDeltaRatio);
 
 /** \see GEOSConcaveHullOfPolygons */
 extern GEOSGeometry GEOS_DLL *GEOSConcaveHullOfPolygons_r(
@@ -3497,6 +3504,27 @@ extern GEOSGeometry GEOS_DLL *GEOSPolygonHullSimplify(
     const GEOSGeometry* g,
     unsigned int isOuter,
     double vertexNumFraction);
+
+/**
+* Computes a topology-preserving simplified hull of a polygonal geometry,
+* with hull shape determined by the areaDeltaRatio,
+* specifying the ratio of maximum difference in area to original area.
+* Larger values compute less concave results.
+* A value of 0 produces the original geometry.
+* Either outer or inner hulls can be computed..
+*
+* \param g the polygonal geometry to process
+* \param isOuter indicates whether to compute an outer or inner hull (1 for outer hull, 0 for inner)
+* \param areaDeltaRatio the target ratio of area difference to original area
+* \return A newly allocated geometry of the concave hull. NULL on exception.
+*
+* Caller is responsible for freeing with GEOSGeom_destroy().
+* \see geos::simplify::PolygonHullSimplifier
+*/
+extern GEOSGeometry GEOS_DLL *GEOSPolygonHullSimplifyByArea(
+    const GEOSGeometry* g,
+    unsigned int isOuter,
+    double areaDeltaRatio);
 
 /**
 * Constructs a concave hull of a set of polygons, respecting
