--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -293,9 +293,9 @@ if(BUILD_SHARED_LIBS)
   if(NOT WIN32 OR MINGW)
     set_target_properties(geos_c PROPERTIES SOVERSION ${CAPI_VERSION_MAJOR})
   endif()
-  if(MINGW)
+  if(MINGW AND VERSION_MINGW_SHARED_LIBS)
     set_target_properties(geos_c PROPERTIES SUFFIX "-${CAPI_VERSION_MAJOR}${CMAKE_SHARED_LIBRARY_SUFFIX}")
-  endif(MINGW)
+  endif()
 endif()
 
 add_subdirectory(capi)
